src/app/[shortCode]/_components/overlay/Info.module.css
.footerBlock {
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  padding: 8px 12px;
  z-index: 500;
}

.footerContent {
  display: flex;
  align-items: center;
  justify-content: space-between;
  max-width: 1200px;
  margin: 0 auto;
}

.authorLogo {
  margin-right: 8px;
}

.workInfo {
  flex-grow: 1;
  overflow: hidden; /* Включаем ограничение содержимого */
}

.menuButton {
  margin-left: 12px;
}

